# NetzNoe-SmartmeterPortal-Api

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: codeql.yaml  release.yaml  tests.yaml
src/: example.py  example_pendulum.py
src/netznoe_smartmeter_portal_api/: __init__.py  api.py  models.py
tests/: conftest.py  test_authentication.py  test_calc_next_datetime.py  test_data_fetching.py  test_metering_points.py
tests/responses/: data_account_id_1.json  data_account_id_2.json  data_day.json  data_logout.json  data_metering_point.json  data_month.json  data_week.json  data_year.json
