[metadata]
name = netznoe-smartmeter-portal-api
version = 1.0.2
description = An unofficial python implementation of the NetzNÖ Smartmeter Portal API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Mathias Schuepany
url = https://github.com/schue30/NetzNoe-SmartmeterPortal-Api
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7
install_requires =
    requests>=2.31.0
    pendulum>=2.1.2
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[flake8]
exclude =
    .tox,
    docs,
    venv
max-line-length = 120

[isort]
force_single_line = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 120
